force-app/main/default/objects/Jira_Sync__c/Jira_Sync__c.object-meta.xml
<CustomObject>
    <description>Small Office JIRA Integration - Tracks bidirectional sync between Salesforce and JIRA</description>
    <label>JIRA Sync Record</label>
    <nameField>
        <displayFormat>JIRA-{00000}</displayFormat>
        <label>JIRA Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA Sync Records</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard JIRA sync record</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>