force-app/main/default/objects/Jira_Sync__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <description>Current JIRA issue assignee display name</description>
    <inlineHelpText>Person assigned to this JIRA issue</inlineHelpText>
    <label>JIRA Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>