force-app/main/default/objects/Jira_Sync__c/fields/External_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Issue_Key__c</fullName>
    <description>JIRA issue key (e.g., SH-123) used for efficient lookups and updates</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique JIRA issue identifier (e.g., SH-123)</inlineHelpText>
    <label>JIRA Issue Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>