force-app/main/default/objects/Jira_Sync__c/fields/Issue_URL__c.field-meta.xml
<CustomField>
    <fullName>Issue_URL__c</fullName>
    <description>Direct clickable link to the JIRA issue</description>
    <inlineHelpText>Click to open the JIRA issue in a new tab</inlineHelpText>
    <label>JIRA Issue Link</label>
    <type>Url</type>
</CustomField>