force-app/main/default/objects/Jira_Sync__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <description>Timestamp of the last successful sync operation</description>
    <inlineHelpText>When this record was last synchronized with JIRA</inlineHelpText>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>