force-app/main/default/objects/Jira_Sync__c/fields/Last_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Error__c</fullName>
    <description>Error message from the last failed sync attempt for troubleshooting</description>
    <inlineHelpText>Details about any sync errors for troubleshooting</inlineHelpText>
    <label>Last Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>