force-app/main/default/objects/Jira_Sync__c/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <description>Source Salesforce record ID that triggered the JIRA issue creation</description>
    <inlineHelpText>The Salesforce record that created this JIRA issue</inlineHelpText>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>