force-app/main/default/objects/Jira_Sync__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current JIRA issue status synced from JIRA</description>
    <inlineHelpText>Current status of the JIRA issue</inlineHelpText>
    <label>JIRA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>