force-app/main/default/objects/Jira_Sync__c/listViews/All_JIRA_Syncs.listView-meta.xml
<ListView>
    <fullName>All_JIRA_Syncs</fullName>
    <columns>NAME</columns>
    <columns>External_Issue_Key__c</columns>
    <columns>Status__c</columns>
    <columns>Assignee__c</columns>
    <columns>Sync_Status__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <columns>Issue_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All JIRA Syncs</label>
</ListView>