force-app/main/default/objects/Jira_Sync__c/listViews/Failed_Syncs.listView-meta.xml
<ListView>
    <fullName>Failed_Syncs</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>External_Issue_Key__c</columns>
    <columns>Sync_Status__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <columns>Last_Sync_Error__c</columns>
    <columns>Issue_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sync_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Syncs</label>
</ListView>